--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">MessageBottle</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="float_">float letter</string>
+    <string name="fillblank">Please fill blank</string>
+    <string name="success">succeed in floating!</string>
 </resources>
